--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ temp.log
 temp.errors
 *.ini
 .d/
+.cache/clangd/index/main.cpp.370A92F3F45824F2.idx
+.cache/clangd/index/main.cpp.C6F6F4D87D2F8D2E.idx
+*.idx
